// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast render snapshot of default toast 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #FFFFFF;
  border: 1px solid #FFFFFF;
  border-radius: 4px;
  padding: 12px;
  width: 100%;
  margin-top: 16px;
  box-shadow: 0px 0px 2px 0px rgba(5, 25, 45, 0.3),0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: all;
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    width: 360px;
  }
}

.emotion-1 {
  position: absolute;
  z-index: 1;
  top: -1px;
  left: -1px;
  bottom: -1px;
  width: 4px;
  background-color: #06BDFC;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-2 {
  position: relative;
  width: 28px;
  height: 28px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  color: #009BD8;
}

.emotion-4 {
  position: absolute;
  z-index: 5;
  top: 7px;
  left: 7px;
  width: 14px;
  height: 14px;
  border-radius: 50%;
  background-color: #FFFFFF;
}

.emotion-5 {
  padding-right: 8px;
  padding-left: 8px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  color: #05192D;
  font-weight: 800;
  font-size: 14px;
  margin-bottom: 8px;
  line-height: 1.25;
  margin: 0;
  padding: 4px 0;
  line-height: 1.5;
}

.emotion-7 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  line-height: 1.5;
  margin-bottom: 8px;
  color: #65707C;
  font-size: 14px;
  margin-top: 4px;
  margin-bottom: 0;
}

.emotion-8 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  margin: 0;
  padding: 0;
  outline: 0;
  border-style: solid;
  border-radius: 4px;
  border-width: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 125ms ease-out;
  transition: background-color 125ms ease-out;
  cursor: pointer;
  height: 28px;
  min-width: 28px;
  width: auto;
  font-size: 12px;
  color: #0075AD;
  background-color: transparent;
  border-color: transparent;
  color: #05192D;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-8::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -4px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-8:hover:not(:disabled) {
  background-color: rgba(5, 25, 45, 0.1);
}

.emotion-8:active:not(:disabled) {
  background-color: transparent;
}

.emotion-8:disabled {
  opacity: 0.6;
  cursor: default;
}

<section
  class="emotion-0"
  role="status"
>
  <div
    class="emotion-1"
  />
  <div
    class="emotion-2"
  >
    <div
      class="emotion-3"
    >
      <svg
        aria-hidden="true"
        height="16"
        viewBox="0 0 18 18"
        width="16"
      >
        <path
          d="M9 18A9 9 0 1 0 9 0a9 9 0 0 0 0 18ZM9 6a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm0 8a1 1 0 0 1-1-1V8a1 1 0 0 1 2 0v5a1 1 0 0 1-1 1Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="emotion-4"
    />
  </div>
  <div
    class="emotion-5"
  >
    <h2
      class="emotion-6"
    >
      Default Toast Title
    </h2>
    <p
      class="emotion-7"
    >
      Default toast description.
    </p>
  </div>
  <button
    aria-label="Close notification"
    class="emotion-8"
  >
    <svg
      aria-hidden="true"
      height="12"
      viewBox="0 0 18 18"
      width="12"
    >
      <path
        d="m9.005 7.625 4.83-4.83a.976.976 0 0 1 1.38 1.38l-4.83 4.83 4.82 4.82a.976.976 0 1 1-1.38 1.38l-4.82-4.82-4.83 4.83a.976.976 0 0 1-1.38-1.38l4.83-4.83-4.84-4.84a.976.976 0 1 1 1.38-1.38l4.84 4.84Z"
        fill="currentColor"
      />
    </svg>
  </button>
</section>
`;

exports[`Toast render snapshot of error toast 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #FFFFFF;
  border: 1px solid #FFFFFF;
  border-radius: 4px;
  padding: 12px;
  width: 100%;
  margin-top: 16px;
  box-shadow: 0px 0px 2px 0px rgba(5, 25, 45, 0.3),0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: all;
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    width: 360px;
  }
}

.emotion-1 {
  position: absolute;
  z-index: 1;
  top: -1px;
  left: -1px;
  bottom: -1px;
  width: 4px;
  background-color: #FF5400;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-2 {
  position: relative;
  width: 28px;
  height: 28px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  color: #FF5400;
}

.emotion-4 {
  position: absolute;
  z-index: 5;
  top: 7px;
  left: 7px;
  width: 14px;
  height: 14px;
  border-radius: 50%;
  background-color: #FFFFFF;
}

.emotion-5 {
  padding-right: 8px;
  padding-left: 8px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  color: #05192D;
  font-weight: 800;
  font-size: 14px;
  margin-bottom: 8px;
  line-height: 1.25;
  margin: 0;
  padding: 4px 0;
  line-height: 1.5;
}

.emotion-7 {
  position: absolute;
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  white-space: nowrap;
  word-wrap: normal;
}

.emotion-8 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  line-height: 1.5;
  margin-bottom: 8px;
  color: #65707C;
  font-size: 14px;
  margin-top: 4px;
  margin-bottom: 0;
}

.emotion-9 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  margin: 0;
  padding: 0;
  outline: 0;
  border-style: solid;
  border-radius: 4px;
  border-width: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 125ms ease-out;
  transition: background-color 125ms ease-out;
  cursor: pointer;
  height: 28px;
  min-width: 28px;
  width: auto;
  font-size: 12px;
  color: #0075AD;
  background-color: transparent;
  border-color: transparent;
  color: #05192D;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-9::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -4px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-9:hover:not(:disabled) {
  background-color: rgba(5, 25, 45, 0.1);
}

.emotion-9:active:not(:disabled) {
  background-color: transparent;
}

.emotion-9:disabled {
  opacity: 0.6;
  cursor: default;
}

<section
  class="emotion-0"
  role="status"
>
  <div
    class="emotion-1"
  />
  <div
    class="emotion-2"
  >
    <div
      class="emotion-3"
    >
      <svg
        aria-hidden="true"
        height="16"
        viewBox="0 0 18 18"
        width="16"
      >
        <path
          d="M9 18A9 9 0 1 1 9 0a9 9 0 0 1 0 18Zm1.414-9 2.122-2.121a1 1 0 1 0-1.415-1.415L9 7.586 6.879 5.464A1 1 0 0 0 5.464 6.88L7.586 9l-2.122 2.121a1 1 0 0 0 1.415 1.415L9 10.414l2.121 2.122a1 1 0 0 0 1.415-1.415L10.414 9Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="emotion-4"
    />
  </div>
  <div
    class="emotion-5"
  >
    <h2
      class="emotion-6"
    >
      <span
        class="emotion-7"
      >
        Error:
      </span>
      Oops, Something Went Wrong
    </h2>
    <p
      class="emotion-8"
    >
      Error toast description.
    </p>
  </div>
  <button
    aria-label="Close notification"
    class="emotion-9"
  >
    <svg
      aria-hidden="true"
      height="12"
      viewBox="0 0 18 18"
      width="12"
    >
      <path
        d="m9.005 7.625 4.83-4.83a.976.976 0 0 1 1.38 1.38l-4.83 4.83 4.82 4.82a.976.976 0 1 1-1.38 1.38l-4.82-4.82-4.83 4.83a.976.976 0 0 1-1.38-1.38l4.83-4.83-4.84-4.84a.976.976 0 1 1 1.38-1.38l4.84 4.84Z"
        fill="currentColor"
      />
    </svg>
  </button>
</section>
`;

exports[`Toast render snapshot of success toast 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #FFFFFF;
  border: 1px solid #FFFFFF;
  border-radius: 4px;
  padding: 12px;
  width: 100%;
  margin-top: 16px;
  box-shadow: 0px 0px 2px 0px rgba(5, 25, 45, 0.3),0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: all;
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    width: 360px;
  }
}

.emotion-1 {
  position: absolute;
  z-index: 1;
  top: -1px;
  left: -1px;
  bottom: -1px;
  width: 4px;
  background-color: #03EF62;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-2 {
  position: relative;
  width: 28px;
  height: 28px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  color: #03EF62;
}

.emotion-4 {
  position: absolute;
  z-index: 5;
  top: 7px;
  left: 7px;
  width: 14px;
  height: 14px;
  border-radius: 50%;
  background-color: #05192D;
}

.emotion-5 {
  padding-right: 8px;
  padding-left: 8px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  color: #05192D;
  font-weight: 800;
  font-size: 14px;
  margin-bottom: 8px;
  line-height: 1.25;
  margin: 0;
  padding: 4px 0;
  line-height: 1.5;
}

.emotion-7 {
  position: absolute;
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  white-space: nowrap;
  word-wrap: normal;
}

.emotion-8 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  margin: 0;
  padding: 0;
  outline: 0;
  border-style: solid;
  border-radius: 4px;
  border-width: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 125ms ease-out;
  transition: background-color 125ms ease-out;
  cursor: pointer;
  height: 28px;
  min-width: 28px;
  width: auto;
  font-size: 12px;
  color: #0075AD;
  background-color: transparent;
  border-color: transparent;
  color: #05192D;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-8::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -4px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-8:hover:not(:disabled) {
  background-color: rgba(5, 25, 45, 0.1);
}

.emotion-8:active:not(:disabled) {
  background-color: transparent;
}

.emotion-8:disabled {
  opacity: 0.6;
  cursor: default;
}

<section
  class="emotion-0"
  role="status"
>
  <div
    class="emotion-1"
  />
  <div
    class="emotion-2"
  >
    <div
      class="emotion-3"
    >
      <svg
        aria-hidden="true"
        height="16"
        viewBox="0 0 18 18"
        width="16"
      >
        <path
          d="M9 18A9 9 0 1 1 9 0a9 9 0 0 1 0 18Zm2.326-11.96-3.355 4.143L6.63 8.627a1 1 0 1 0-1.514 1.307l2.124 2.461a1 1 0 0 0 1.534-.024l4.108-5.073a1 1 0 0 0-1.555-1.259Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="emotion-4"
    />
  </div>
  <div
    class="emotion-5"
  >
    <h2
      class="emotion-6"
    >
      <span
        class="emotion-7"
      >
        Success:
      </span>
      Success!
    </h2>
  </div>
  <button
    aria-label="Close notification"
    class="emotion-8"
  >
    <svg
      aria-hidden="true"
      height="12"
      viewBox="0 0 18 18"
      width="12"
    >
      <path
        d="m9.005 7.625 4.83-4.83a.976.976 0 0 1 1.38 1.38l-4.83 4.83 4.82 4.82a.976.976 0 1 1-1.38 1.38l-4.82-4.82-4.83 4.83a.976.976 0 0 1-1.38-1.38l4.83-4.83-4.84-4.84a.976.976 0 1 1 1.38-1.38l4.84 4.84Z"
        fill="currentColor"
      />
    </svg>
  </button>
</section>
`;

exports[`Toast render snapshot of warning toast 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #FFFFFF;
  border: 1px solid #FFFFFF;
  border-radius: 4px;
  padding: 12px;
  width: 100%;
  margin-top: 16px;
  box-shadow: 0px 0px 2px 0px rgba(5, 25, 45, 0.3),0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: all;
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    width: 360px;
  }
}

.emotion-1 {
  position: absolute;
  z-index: 1;
  top: -1px;
  left: -1px;
  bottom: -1px;
  width: 4px;
  background-color: #FFBC4B;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-2 {
  position: relative;
  width: 28px;
  height: 28px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  color: #FFBC4B;
}

.emotion-4 {
  position: absolute;
  z-index: 5;
  top: 7px;
  left: 7px;
  width: 0;
  height: 0;
  border-left: 7px solid transparent;
  border-right: 7px solid transparent;
  border-bottom: 14px solid #05192D;
}

.emotion-5 {
  padding-right: 8px;
  padding-left: 8px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  color: #05192D;
  font-weight: 800;
  font-size: 14px;
  margin-bottom: 8px;
  line-height: 1.25;
  margin: 0;
  padding: 4px 0;
  line-height: 1.5;
}

.emotion-7 {
  position: absolute;
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  white-space: nowrap;
  word-wrap: normal;
}

.emotion-8 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  margin: 0;
  padding: 0;
  outline: 0;
  border-style: solid;
  border-radius: 4px;
  border-width: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 125ms ease-out;
  transition: background-color 125ms ease-out;
  cursor: pointer;
  height: 28px;
  min-width: 28px;
  width: auto;
  font-size: 12px;
  color: #0075AD;
  background-color: transparent;
  border-color: transparent;
  color: #05192D;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-8::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -4px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-8:hover:not(:disabled) {
  background-color: rgba(5, 25, 45, 0.1);
}

.emotion-8:active:not(:disabled) {
  background-color: transparent;
}

.emotion-8:disabled {
  opacity: 0.6;
  cursor: default;
}

<section
  class="emotion-0"
  role="status"
>
  <div
    class="emotion-1"
  />
  <div
    class="emotion-2"
  >
    <div
      class="emotion-3"
    >
      <svg
        aria-hidden="true"
        height="16"
        viewBox="0 0 18 18"
        width="16"
      >
        <path
          clip-rule="evenodd"
          d="m10.869 1.647 6.875 12.663v.021a2.122 2.122 0 0 1-.042 2.093 2.12 2.12 0 0 1-1.821 1.033H2.131a2.122 2.122 0 0 1-1.835-1.038 2.106 2.106 0 0 1-.028-2.109L7.149 1.647A2.128 2.128 0 0 1 9.01.542c.381 0 .754.103 1.082.297.326.195.595.474.777.808zM8.02 5.531a.994.994 0 1 1 1.99 0v4.57a.995.995 0 1 1-1.99 0v-4.57zm1.021 8.961a1.144 1.144 0 0 1-1.054-.704 1.143 1.143 0 0 1 .247-1.243 1.14 1.14 0 0 1 1.947.807 1.14 1.14 0 0 1-1.14 1.14z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="emotion-4"
    />
  </div>
  <div
    class="emotion-5"
  >
    <h2
      class="emotion-6"
    >
      <span
        class="emotion-7"
      >
        Warning:
      </span>
      Warning Toast Title
    </h2>
  </div>
  <button
    aria-label="Close notification"
    class="emotion-8"
  >
    <svg
      aria-hidden="true"
      height="12"
      viewBox="0 0 18 18"
      width="12"
    >
      <path
        d="m9.005 7.625 4.83-4.83a.976.976 0 0 1 1.38 1.38l-4.83 4.83 4.82 4.82a.976.976 0 1 1-1.38 1.38l-4.82-4.82-4.83 4.83a.976.976 0 0 1-1.38-1.38l4.83-4.83-4.84-4.84a.976.976 0 1 1 1.38-1.38l4.84 4.84Z"
        fill="currentColor"
      />
    </svg>
  </button>
</section>
`;
